# AdventOfCode24

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: day1.h.92E0A64BBF09153A.idx  day2.h.AEA5440189C229AB.idx  main.c.49807DA4D5FE11BF.idx  utils.h.245A42481977A874.idx
src/: main.c  utils.h
src/day1/: day1.h
src/day2/: day2.h
src/day3/: day3.h
